# ctypr

./: .gitignore  CMakeLists.txt  README.md  commitlint.config.js  diff.md  roadmap.md
.githooks/: commit-msg
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: ctyprConfig.cmake.in
docs/: Doxyfile.in  doxygen-awesome-darkmode-toggle.js  doxygen-awesome.css  footer.html  header.html  index.md
examples/: CMakeLists.txt  usage.c
scripts/: setup-hooks.ps1  setup-hooks.sh
src/content/: content.c  content.h
src/core/: callback.h  ctypr.h  engine.c  engine.h  error.h  event.h  signal.c  signal.h  signal_internal.h  snapshot.h  state.h  stats.h  version.h.in
src/db/: repository.c  repository.h
src/format/: formatter.c  formatter.h
src/utils/: logger.c  logger.h
tests/: CMakeLists.txt  test_content.c  test_engine.c  test_formatter.c  test_logger.c  test_repository.c
